--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="fragments_background">#ffffff</color>
+    <color name="status_bar_color">#f6f6f6</color>
+
+    <color name="input_card_color">#e5e5e5</color>
+    <color name="input_card_stroke_color">#fafafa</color>
+
+    <color name="message_sent_backgroundColor">#f0f0f0</color>
+    <color name="message_received_backgroundColor">#40C4FF</color>
+    <color name="dialog_handle_color">#C0C0C0</color>
+
 </resources>
