--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -47,7 +47,7 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/walletsCard"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/home_toolbar"
         android:layout_marginStart="18dp"
         android:layout_marginTop="48dp"
@@ -65,6 +65,8 @@
                 android:id="@+id/titleLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_toStartOf="@id/sharedWithIcon"
                 android:orientation="horizontal">
 
                 <TextView
@@ -74,10 +76,11 @@
                     android:maxWidth="210dp"
                     android:maxLines="1"
                     android:text="Long Wallet Title"
-                    android:textSize="22sp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/walletDropDownBtn"
                     android:layout_width="22dp"
                     android:layout_height="22dp"
                     android:layout_gravity="center_vertical"
@@ -93,6 +96,15 @@
 
             </LinearLayout>
 
+
+            <ImageView
+                android:id="@+id/sharedWithIcon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_baseline_person_24" />
+
             <LinearLayout
                 android:id="@+id/walletDetailsLayout"
                 android:layout_width="match_parent"
@@ -106,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:maxLines="1"
                     android:text="lei"
-                    android:textSize="18sp" />
+                    android:textSize="20sp" />
 
                 <TextView
                     android:id="@+id/walletAmount"
@@ -115,21 +127,49 @@
                     android:layout_marginStart="8dp"
                     android:maxLines="1"
                     android:text="0000.00000"
-                    android:textSize="18sp" />
+                    android:textSize="20sp" />
             </LinearLayout>
+
+            <RelativeLayout
+                android:id="@+id/editWalletLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/walletDetailsLayout"
+                android:layout_marginTop="16dp"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/adjustBallanceBtn"
+                    android:layout_width="120dp"
+                    android:layout_height="34dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:insetLeft="0dp"
+                    android:insetTop="0dp"
+                    android:insetRight="0dp"
+                    android:insetBottom="0dp"
+                    android:padding="0dp"
+                    android:text="Adjust Ballance"
+                    android:textSize="12sp"
+                    app:cornerRadius="10dp"
+                    app:icon="@drawable/ic_round_edit_24"
+                    app:iconGravity="textStart"
+                    app:iconPadding="4dp" />
+
+            </RelativeLayout>
 
             <RelativeLayout
                 android:id="@+id/lastTransactionLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/walletDetailsLayout"
-                android:layout_marginTop="20dp"
+                android:layout_below="@id/editWalletLayout"
+                android:layout_marginTop="16dp"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:id="@+id/transactionsHeaderLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -138,9 +178,11 @@
                         android:text="Latest Transaction" />
 
                     <com.google.android.material.button.MaterialButton
+                        android:id="@+id/seeAllTransactionsBtn"
                         style="@style/Widget.Material3.Button.TextButton"
                         android:layout_width="70dp"
                         android:layout_height="40dp"
+                        android:layout_marginStart="8dp"
                         android:insetLeft="0dp"
                         android:insetTop="0dp"
                         android:insetRight="0dp"
@@ -153,7 +195,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/transactionsHeaderLayout"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginTop="8dp"
                     android:orientation="vertical">
 
                     <ImageView
@@ -207,7 +249,7 @@
         android:layout_margin="18dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/add_conversation_btn"
+        android:id="@+id/addTransactionBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
