--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,184 +38,228 @@
                 android:textSize="20sp"
                 tools:text="Welcome, Robert" />
 
-
         </RelativeLayout>
-
 
     </com.google.android.material.appbar.MaterialToolbar>
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/walletsCard"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/home_toolbar"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="18dp"
-        app:cardCornerRadius="18dp"
-        app:strokeWidth="0dp">
+        android:layout_height="match_parent"
+        android:layout_below="@id/home_toolbar">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="24dp">
+            android:layout_marginTop="48dp">
 
-            <LinearLayout
-                android:id="@+id/titleLayout"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/walletsCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_toStartOf="@id/sharedWithIcon"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/walletTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxWidth="210dp"
-                    android:maxLines="1"
-                    android:text="Long Wallet Title"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/walletDropDownBtn"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="8dp"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    app:icon="@drawable/ic_round_keyboard_arrow_down_24"
-                    app:iconGravity="textStart"
-                    app:iconPadding="0dp"
-                    app:iconSize="22dp" />
-
-            </LinearLayout>
-
-
-            <ImageView
-                android:id="@+id/sharedWithIcon"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_baseline_person_24" />
-
-            <LinearLayout
-                android:id="@+id/walletDetailsLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/titleLayout"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/walletCurrency"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:maxLines="1"
-                    android:text="lei"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/walletAmount"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:maxLines="1"
-                    android:text="0000.00000"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <RelativeLayout
-                android:id="@+id/editWalletLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/walletDetailsLayout"
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/adjustBallanceBtn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="34dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:insetLeft="0dp"
-                    android:insetTop="0dp"
-                    android:insetRight="0dp"
-                    android:insetBottom="0dp"
-                    android:padding="8dp"
-                    android:text="Adjust Ballance"
-                    android:textSize="12sp"
-                    app:cornerRadius="10dp"
-                    app:icon="@drawable/ic_round_edit_24"
-                    app:iconGravity="textStart"
-                    app:iconPadding="4dp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/lastTransactionLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/editWalletLayout"
-                android:layout_marginTop="16dp"
-                android:orientation="vertical">
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                android:layout_marginBottom="18dp"
+                app:cardCornerRadius="18dp"
+                app:strokeWidth="0dp">
 
                 <RelativeLayout
-                    android:id="@+id/transactionsHeaderLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:padding="24dp">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:id="@+id/titleLayout"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentStart="true"
-                        android:layout_centerVertical="true"
                         android:layout_marginEnd="8dp"
-                        android:text="Latest Transaction" />
+                        android:layout_toStartOf="@id/sharedWithIcon"
+                        android:orientation="horizontal">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/seeAllTransactionsBtn"
-                        style="@style/Widget.Material3.Button.TextButton"
-                        android:layout_width="70dp"
+                        <TextView
+                            android:id="@+id/walletTitle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxWidth="210dp"
+                            android:maxLines="1"
+                            android:text="Long Wallet Title"
+                            android:textSize="24sp"
+                            android:textStyle="bold" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/walletDropDownBtn"
+                            android:layout_width="22dp"
+                            android:layout_height="22dp"
+                            android:layout_gravity="center_vertical"
+                            android:layout_marginStart="8dp"
+                            android:insetLeft="0dp"
+                            android:insetTop="0dp"
+                            android:insetRight="0dp"
+                            android:insetBottom="0dp"
+                            app:icon="@drawable/ic_round_keyboard_arrow_down_24"
+                            app:iconGravity="textStart"
+                            app:iconPadding="0dp"
+                            app:iconSize="22dp" />
+
+                    </LinearLayout>
+
+
+                    <ImageView
+                        android:id="@+id/sharedWithIcon"
+                        android:layout_width="40dp"
                         android:layout_height="40dp"
                         android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginStart="8dp"
-                        android:insetLeft="0dp"
-                        android:insetTop="0dp"
-                        android:insetRight="0dp"
-                        android:insetBottom="0dp"
-                        android:text="See All" />
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/ic_baseline_person_24" />
+
+                    <LinearLayout
+                        android:id="@+id/walletDetailsLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/titleLayout"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/walletCurrency"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            android:text="lei"
+                            android:textSize="20sp" />
+
+                        <TextView
+                            android:id="@+id/walletAmount"
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:maxLines="1"
+                            android:text="0000.00000"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/editWalletLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/walletDetailsLayout"
+                        android:layout_marginTop="16dp"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/adjustBallanceBtn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="34dp"
+                            android:layout_alignParentStart="true"
+                            android:layout_centerVertical="true"
+                            android:insetLeft="0dp"
+                            android:insetTop="0dp"
+                            android:insetRight="0dp"
+                            android:insetBottom="0dp"
+                            android:padding="8dp"
+                            android:text="Adjust Ballance"
+                            android:textSize="12sp"
+                            app:cornerRadius="10dp"
+                            app:icon="@drawable/ic_round_edit_24"
+                            app:iconGravity="textStart"
+                            app:iconPadding="4dp" />
+
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/lastTransactionLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/editWalletLayout"
+                        android:layout_marginTop="16dp"
+                        android:orientation="vertical">
+
+                        <RelativeLayout
+                            android:id="@+id/transactionsHeaderLayout"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentStart="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginEnd="8dp"
+                                android:text="Latest Transaction" />
+
+                            <com.google.android.material.button.MaterialButton
+                                android:id="@+id/seeAllTransactionsBtn"
+                                style="@style/Widget.Material3.Button.TextButton"
+                                android:layout_width="70dp"
+                                android:layout_height="40dp"
+                                android:layout_alignParentEnd="true"
+                                android:layout_centerVertical="true"
+                                android:layout_marginStart="8dp"
+                                android:insetLeft="0dp"
+                                android:insetTop="0dp"
+                                android:insetRight="0dp"
+                                android:insetBottom="0dp"
+                                android:text="See All" />
+                        </RelativeLayout>
+
+                        <include
+                            layout="@layout/item_transaction"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/transactionsHeaderLayout"
+                            android:layout_marginTop="8dp" />
+
+                    </RelativeLayout>
+
                 </RelativeLayout>
+            </com.google.android.material.card.MaterialCardView>
 
-                <include
-                    layout="@layout/item_transaction"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/transactionsHeaderLayout"
-                    android:layout_marginTop="8dp" />
+            <LinearLayout
+                android:id="@+id/chartsLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/walletsCard"
+                android:layout_marginStart="18dp"
+                android:layout_marginEnd="18dp"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:weightSum="1">
 
-            </RelativeLayout>
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/barChartCard"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.5"
+                    app:cardCornerRadius="18dp"
+                    app:strokeWidth="0dp">
 
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/lineChartCard"
+                    android:layout_width="0dp"
+                    android:layout_height="150dp"
+                    android:layout_marginStart="18dp"
+                    android:layout_weight="0.5"
+                    app:cardCornerRadius="18dp"
+                    app:strokeWidth="0dp">
+
+                </com.google.android.material.card.MaterialCardView>
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recentTransactionsRv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/chartsLayout"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="18dp"
+                android:layout_marginBottom="18dp"
+                tools:itemCount="8"
+                tools:listitem="@layout/item_transaction" />
         </RelativeLayout>
-    </com.google.android.material.card.MaterialCardView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/walletsCard"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="18dp"
-        tools:itemCount="8"
-        tools:listitem="@layout/item_transaction" />
+    </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTransactionBtn"
