--- a/app/src/main/res/layout/item_wallet.xml
+++ b/app/src/main/res/layout/item_wallet.xml
@@ -2,26 +2,33 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="12dp">
 
-    <TextView
-        android:id="@+id/walletItemTitle"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"
         android:layout_marginStart="18dp"
         android:layout_toStartOf="@id/walletItemPersonImage"
-        android:text="Wallet Title" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/walletItemAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/walletItemTitle"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="18dp"
-        android:layout_toStartOf="@id/walletItemPersonImage"
-        android:text="2349 Lei" />
+        <TextView
+            android:id="@+id/walletItemTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Wallet Title"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/walletItemAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2349 Lei"
+            android:textSize="14sp" />
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/walletItemPersonImage"
