--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -13,10 +13,22 @@
         <action
             android:id="@+id/action_homeFragment_to_settingsFragment"
             app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_addTransactionLayout"
+            app:destination="@id/addTransactionLayout" />
     </fragment>
     <fragment
         android:id="@+id/settingsFragment"
         android:name="com.rokudo.xpense.fragments.SettingsFragment"
         android:label="fragment_settings"
         tools:layout="@layout/fragment_settings" />
+    <fragment
+        android:id="@+id/addTransactionLayout"
+        android:name="com.rokudo.xpense.fragments.AddTransactionFragment"
+        android:label="fragment_add_transaction_layout"
+        tools:layout="@layout/fragment_add_transaction" >
+        <argument
+            android:name="walletId"
+            app:argType="string" />
+    </fragment>
 </navigation>
