--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -262,6 +262,7 @@
                         </RelativeLayout>
 
                         <include
+                            android:id="@+id/latestTransactionItem"
                             layout="@layout/item_transaction"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
